# snek

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json
doc/: Building.md  BuildingIt.md
include/: Entities.h  Game.h  Renderer.h  Symbols.h  Terminal.h  Timings.h  Types.h  Utils.h
include/input/: Common.h  nix.h
src/: Entities.c  Game.c  Renderer.c  TimingsLinux.c  Utils.c  main.c
src/Platform/Linux/: Terminal.c
src/Platform/OSX/: Timings.c
src/Platform/Windows/: Terminal.c  Timings.c
src/input/: nix.c
